# alpha_vantage_mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  nginx.conf  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: deploy-web.yml  deploy.yml  publish-cli.yml  publish-mcp.yml  publish-skill.yml
analytics/: analytics.yaml  create-logs-processor-role.sh  deploy-analytics.sh  query-athena.sh  samconfig-analytics.toml  setup-glue-tables.sh
analytics/sql/: daily-tools-call.sql
analytics/src/: compactor.py  logs_processor.py  migrator.py
api/: pyproject.toml
api/src/av_api/: client.py  context.py  registry.py
api/src/av_api/tools/: alpha_intelligence.py  commodities.py  core_stock_apis.py  cryptocurrencies.py  economic_indicators.py  forex.py  fundamental_data.py  index_data.py  openai.py  options_data_apis.py  ping.py  technical_indicators_part1.py  technical_indicators_part2.py  technical_indicators_part3.py  technical_indicators_part4.py
cli/: README.md  SKILL.md  pyproject.toml
cli/src/av_cli/: main.py
cli/tests/: test_limit.py
docs/: progressive-discovery.md
mcp/: authorization.html  build_static_pages.py  lambda_function.py  local_http_server.py  pyproject.toml
mcp/src/av_mcp/: common.py  decorators.py  lambda_function.py  local_http_server.py  main.py  oauth.py  stdio_server.py  tokens.py  utils.py
mcp/src/av_mcp/static/: artifacts.html  index.html
mcp/src/av_mcp/tools/: meta_tools.py  registry.py
mcp/tests/: test_client_capability_default.py  test_http_pool.py  test_lambda_function.py  test_meta_tools_backward_compat.py  test_oauth_tokens.py  test_return_full_data.py  test_tool_annotation_compliance.py  test_tool_description_compliance.py
scripts/: deploy.sh
server/: pyproject.toml
server/src/: common.py  context.py  decorators.py  stdio_server.py  utils.py
server/src/tools/: alpha_intelligence.py  commodities.py  meta_tools.py  registry.py
skills/global-stock-analysis/: SKILL.md
skills/global-stock-analysis/references/: fundamentals.md  options.md
web/app/: layout.tsx  page.tsx
web/components/: Markdown.tsx  PostPage.tsx
