[project]
name = "alphavantage-core"
version = "0.1.0"
description = "Alpha Vantage API client library - shared tool definitions and HTTP client"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/av_api"]
