[project]
name = "av-cli"
version = "0.1.7"
description = "CLI wrapper for Alpha Vantage APIs"
requires-python = ">=3.10"
dependencies = [
    "alphavantage-core",
    "click",
    "httpx",
    "loguru",
    "python-dotenv",
]

[project.scripts]
av-cli = "av_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/av_cli"]

[tool.uv.sources]
alphavantage-core = { workspace = true }
