[project]
name = "marketdata-cli"
version = "0.1.8"
description = "Market Data CLI - stocks, forex, crypto, commodities & more from your terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alphavantage-core",
    "click",
    "httpx",
    "loguru",
    "python-dotenv",
]

[project.scripts]
marketdata-cli = "av_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/av_cli"]

[tool.uv.sources]
alphavantage-core = { workspace = true }
